atualização das divs

--- a/index.html
+++ b/index.html
@@ -84,9 +84,18 @@
                 </tbody>
             </table>
     </div>
-
-  
-  
+    
+    <div class="container">
+        <div class="box">
+          <img src="imagens/musculacao1.JPEG" alt="Descrição da imagem 1">
+        </div>
+        <div class="box">
+          <img src="imagens/boxe.jpeg" alt="Descrição da imagem 2">
+        </div>
+        <div class="box">
+          <img src="imagens/cross.webp" alt="Descrição da imagem 3">
+        </div>
+      </div>
 
 </body>
 </html>
