--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <footer>
-        <p>Site Criado por Iago Rodrigues</p>
+        <p>Site Criado por <a href="https://github.com/IagoRodrigues01" target="_blank"> Iago Rodrigues</a></p>
       </footer>
 </body>
 </html>
