att de link nas divs

--- a/index.html
+++ b/index.html
@@ -85,16 +85,28 @@
             </table>
     </div>
     
-    <div class="container">
-        <div class="box">
-          <img src="imagens/musculacao1.JPEG" alt="Descrição da imagem 1">
+            <a href="mus.html">
+                <div class="container">
+                <div class="box">
+                <img src="imagens/musculacao1.JPEG" alt="Descrição da imagem 2">
+                </div>
+            </a>
+                
+
+          <a href="">
+            <div class="box">
+                <img src="imagens/boxe.jpeg" alt="Descrição da imagem 2">
+                </div>
+            </a>
+
+            <a href="">
+            <div class="box">
+            <img src="imagens/cross.webp" alt="Descrição da imagem 3">
+            </div>
         </div>
-        <div class="box">
-          <img src="imagens/boxe.jpeg" alt="Descrição da imagem 2">
-        </div>
-        <div class="box">
-          <img src="imagens/cross.webp" alt="Descrição da imagem 3">
-        </div>
+        </a>
+
+
       </div>
 
       <footer>
