--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
             </a>
                 
 
-          <a href="">
+          <a href="artes.html">
             <div class="box">
                 <img src="imagens/boxe.jpeg" alt="Descrição da imagem 2">
                 </div>
             </a>
 
-            <a href="">
+            <a href="cross.html">
             <div class="box">
             <img src="imagens/cross.webp" alt="Descrição da imagem 3">
             </div>
