--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <header>
         <nav>
-            <a href="#">Contato</a>
-            <a href="#">Planos</a>
-            <a href="#">Convênios</a>
+            <a href="https://web.whatsapp.com/" target="_blank">Contato</a>
+
+            <a href="https://www.smartfit.com.br/planos?_ga=2.89918558.454539968.1681154687-611916778.1680969771&_gac=1.252839803.1681154687.CjwKCAjw586hBhBrEiwAQYEnHQh8KL_IvopcObl27GuPRghu6vyznS8bTBZicLhNbpveRwVyjbECghoCXYcQAvD_BwE" target="_blank">Planos</a>
+
+            <a href="https://www.smartfit.com.br/academias" target="_blank">Filiais</a>
         </nav>
     </header>
    
